--- a/theory.tex
+++ b/theory.tex
@@ -89,7 +89,11 @@ The normalization of a four-component wave function is then
 \begin{equation}
   \int \rho \,\d^3x= \int \psi^*\psi \,\d^3x= \int \psi_1^*\psi_1+\psi_2^*\psi_2+\psi_3^*\psi_3+\psi_4^*\psi_4 \,\d^3x= 1\,.  \label{norm}
 \end{equation}
-The probability density $\rho(x,y,z)$ is the physical quantity we are interested in, and all the four-component wavefunctions and other formalism is just a way of calculating it. This $\rho$ is also the thing we should compare with the Schrödinger equation.
+The probability density $\rho(x,y,z)$ is the physical quantity we are
+interested in, and all the four-component wavefunctions and other formalism is
+just a way of calculating it. This $\rho$ is also the thing we should compare
+with the probability density calculated from the solution of Schrödinger
+equation.
 
 \subsection{Radial Dirac equation}
 
