removed old jokes from the manuscript.

--- a/theory.tex
+++ b/theory.tex
@@ -702,7 +702,9 @@ and we need to sum over the lowest 82 eigenvalues in (\ref{KSdensity}). One opti
 
 \subsection{Introduction}
 
-Literature about pseudopotentials is unfortunately scattered among many articles, so this section gives a review and should save the reader from a lot of troubles.
+Literature about pseudopotentials is unfortunately scattered among many
+articles, so this section tries to give an overview so that we have everything
+at one place.
 
 \subsection{Hermitian Operators in Spherical Symmetry}
 
@@ -793,7 +795,9 @@ and
 \begin{equation*}
   \braket{{\bf r}|\hat V|\varphi}=\int V(\rho)\delta({\bf r}-{\bf r}') \varphi({\bf r'})\d^3r'=V(\rho)\varphi({\bf r})
 \end{equation*}
-so we recover (\ref{loc1}). But we are just fooling around, there's nothing new in these formulas.
+so we recover (\ref{loc1}). There no new information in these formulas, but
+it is useful to understand how to work with them and how to rewrite one to the
+other.
 
 For a semilocal potential (radially local, but angularly nonlocal), the kernel cannot depend on $m$ and is radially local, so: 
 \begin{equation*}
