--- a/theory.tex
+++ b/theory.tex
@@ -795,7 +795,7 @@ and
 \begin{equation*}
   \braket{{\bf r}|\hat V|\varphi}=\int V(\rho)\delta({\bf r}-{\bf r}') \varphi({\bf r'})\d^3r'=V(\rho)\varphi({\bf r})
 \end{equation*}
-so we recover (\ref{loc1}). There no new information in these formulas, but
+so we recover (\ref{loc1}). There is no new information in these formulas, but
 it is useful to understand how to work with them and how to rewrite one to the
 other.
 
